# mysh

./: .gitignore  CHANGELOG.md  CMakeLists.txt  CMakeLists_backup.txt  CMakeLists_original.txt  CROSS_PLATFORM.md  GITHUB_ACTIONS_FIX.md  LICENSE  Makefile  README.md  RESTRUCTURE_PLAN.md  UPLOAD_NOW.md  build.bat  build.sh  demo_syntax_highlight.sh  setup_msys2.bat  test_highlight  xmake.lua
.github/workflows/: build.yml  release.yml
build_new/: cmake_install.cmake
build_new/x64/Release/ZERO_CHECK/: ZERO_CHECK.recipe
build_new/x64/Release/ZERO_CHECK/ZERO_CHECK.tlog/: CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  ZERO_CHECK.lastbuildstate
docs/: BUILD_VERIFICATION.md  COMPLETION_AND_HIGHLIGHTING.md  CONTRIBUTING.md  DEVELOPMENT.md  GITHUB_UPLOAD.md  RESTRUCTURE_COMPLETE.md  SYNTAX_HIGHLIGHTING.md  TAB_COMPLETION_GUIDE.md  VERIFICATION_COMPLETE.md  WINDOWS_CI_FIX.md
src/: builtin.h  executor.h  history.cpp  history.h  main.cpp  main_windows.cpp  parser.cpp  parser.h  platform.cpp  platform.h  platform_linux.cpp  platform_macos.cpp  platform_windows.cpp  shell.cpp  test_highlight.cpp
src/core/: ai_client.cpp  ai_client.h  ai_command.cpp  builtin.cpp  builtin.h  completion.cpp  completion.h  executor.cpp  executor.h  executor_windows.cpp  history.cpp  input_handler.cpp  input_handler.h  shell.cpp  shell.h  syntax_highlighter.cpp  syntax_highlighter.h
src/platform/: platform.cpp  platform.h
src/platform/linux/: platform_linux.cpp
src/platform/macos/: platform_macos.cpp
src/platform/windows/: platform_windows.cpp  posix_compat.cpp  posix_compat.h
tests/integration/: test_shell.sh
